2001-11-05  Jody Goldberg <jgoldberg@home,com>

	* Release 0.75

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.74

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.73

2001-10-07  Jody Goldberg <jgoldberg@home.com>

	* Release 0.71

2001-08-11  Jody Goldberg <jgoldberg@home.com>

	* Release 0.69

2001-06-28  Jody Goldberg <jgoldberg@home>

	* Release 0.67

2001-05-20  Jody Goldberg <jgoldberg@home.com>

	* Release 0.65

2001-05-04  Morten Welinder  <terra@diku.dk>

	* check-glade-visible: New tool.

2001-03-17  Jody Goldberg <jgoldberg@home.com>

	* Release 0.64

2001-01-31  Morten Welinder  <terra@diku.dk>

	* check-header-guards: Certain file names are exceptions no matter
 	what directory they are in.

2001-01-03  Morten Welinder <terra@diku.dk>

	* check-header-guards: New tool.

2001-01-02  Morten Welinder <terra@diku.dk>

	* check-cvs-binary: New tool for checking cvs keyword substitution
 	mode.

	* check-config-h.pl: Exit non-zero if any bad files were found.

2000-12-19  Morten Welinder <terra@diku.dk>

	* check-config-h.pl: Find only regular files.  Handle chomping
 	correctly.  Print error reason on failure.  Ever so slightly
 	improve style-keeping when editing.  Localise files to ensure they
 	are closed.

2000-12-19  Morten Welinder <terra@diku.dk>

	* check-config-h.pl: new script, stolen from Nautilus.

2000-12-18  Morten Welinder <terra@diku.dk>

	* release-do-CLog: handle file names with spaces, just in case.

2000-12-18  Morten Welinder <terra@diku.dk>

	* release-do-CLog: New script.