@@ -40,6 +40,8 @@ xml_in_files = plugin.xml.in
 xml_DATA = $(xml_in_files:.xml.in=.xml)
 
 XML_I18N_XML_KIND = --pass-through
+# It's a hack, but we tag our own command onto the merge rule...
 @XML_I18N_MERGE_XML_RULE@
+	sh $(top_builddir)/tools/fixup-plugin-xml $@ $(gnum_gb_LTLIBRARIES)
 
 EXTRA_DIST = README main.gba gnumeric.gbp $(xml_in_files) $(xml_DATA)
