@@ -5,7 +5,7 @@
 		<_description>Database functions for allowing the retrieval of data from a database</_description>
 	</information>
 	<loader type="g_module">
-		<attribute name="module_file" value="gdaif.so"/>
+		<attribute name="module_file" value="gdaif.la:dlname"/>
 	</loader>
 	<services>
 		<service type="function_group" id="gdaif">
